sonarqube problems solved