@@ -89,7 +89,7 @@ public class Initiator implements InvocationInterceptor {
     private List<Journey> getSortedJourneys(Method method) {
         return Arrays.stream(method.getAnnotationsByType(Journey.class))
                 .sorted(Comparator.comparing(Journey::order))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -102,7 +102,7 @@ public class Initiator implements InvocationInterceptor {
         String journey = preQuest.value();
         JourneyData[] journeyData = preQuest.journeyData();
 
-        PreQuestJourney preQuestJourney = ReflectionUtil.findEnumImplementationsOfInterface(
+        PreQuestJourney<?> preQuestJourney = ReflectionUtil.findEnumImplementationsOfInterface(
                 PreQuestJourney.class, journey, getFrameworkConfig().projectPackage());
 
         Object[] processedData = Arrays.stream(journeyData)
@@ -127,7 +127,7 @@ public class Initiator implements InvocationInterceptor {
      * @return The resolved test data object.
      */
     private Object processJourneyData(JourneyData journeyData, SuperQuest quest) {
-        DataForge dataForge = ReflectionUtil.findEnumImplementationsOfInterface(
+        DataForge<?> dataForge = ReflectionUtil.findEnumImplementationsOfInterface(
                 DataForge.class, journeyData.value(), getFrameworkConfig().projectPackage());
 
         Object argument;
